
Thu Dec 14 17:37:26 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* history.shtml: Modified to use ssi.
	* index.shtml: ditto.
	* licensing.shtml: ditto.
	* links.shtml: ditto.
	* lists.shtml: ditto.
	* mirrors.shtml: ditto.
	* news.shtml: ditto.
	* ported.shtml: ditto.
	* who.shtml: ditto.
	* x86-win32-ports: ditto.

2000-12-13  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingwfaq.shtml: Revert 1.15 to 1.14 because bottom portion of file
	was missing.  Removed popup add for Laura's web account from bottom of 
	file.

2000-12-12  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* docs.shtml: Added more GNU tools' docs links.

2000-12-08  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi: Add subdirectory
	* ssi/bottombar.html: Pasted bottom of page links from index.shtml
	* ssi/footer.html: Pasted pasted page footer from index.shmtl
	* ssi/lsidebar.html: Pasted sidebar links from index.shmtl

2000-12-03  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* docs.shtml: Added link to uploaded BFD docs for current
        release.

2000-11-27  Earnie Boyd  <earnie@users.sourceforge.net>

	* MINGW-USERS-MONTHLY.txt: correct English verbage mistakes.
	Reformat to 67 characters wrap.

2000-10-08  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* links.shtml: Added section "Sites useful for Windows32
        programmers".

        * mingwfaq.shtml: IDE links moved to links.shtml.

        * *.shtml: consistently add "Download" link to page templates.

2000-10-08  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* mingwfaq.shtml: remove blank lines.

2000-09-30  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* MINGW-USERS-MONTHLY.txt: file for monthly mailing to
        list.

2000-09-25  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* ported.shtml, links.shtml: reorganized links to be more
        structured, added link to Mingwrep.

        * index.shtml, history.shtml: replace some abbreviations