@@ -55,6 +55,9 @@ http://www.cs.bris.ac.uk/~jb7216/libgcj/</a>.</li>
 <li> <a href="mailto:kern@caltech.edu">Robert Kern</a>'s instructions
 for <a href="http://starship.python.net/crew/kernr/mingw32/Notes.html">
 Python Extensions with GCC/mingw32</a>.</li>
+<li> <a href="http://www.eGroups.com/group/mingw32/">Old Mingw32 mailing list 
+(use for archived information)</a>
+hosted by <a href="http://www.eGroups.COM">eGroups.COM</a>.</li>
 <li> <a href="mailto:daguer@geocities.com">Daniel Guerrero Miralles</a> has
 some interesting items Mingw on his 
 <a href="http://www.geocities.com/SiliconValley/Station/1177/index.html">
