@@ -21,4 +21,4 @@
 </small>
 </p>
 
-<!--$Id:-->
+<!--$Id: bottombar.html,v 1.2 2000-12-18 19:44:50 earnie Exp $-->
