@@ -21,5 +21,5 @@ SF login</a>).
 We are in the process of creating these web pages, so do expect some
 incomplete pages and broken links. We appreciate your patience. 
 </small></i></p>
-<!--$Id:-->
+<!--$Id: footer.html,v 1.2 2000-12-18 19:44:50 earnie Exp $-->
 
