@@ -31,4 +31,4 @@
 <tr><td colspan="2"><a href="history.shtml">Project History</a></td></tr>
 
 </table>
-<!--$Id:-->
+<!-- $Id: lsidebar.html,v 1.2 2000-12-18 19:44:50 earnie Exp $ -->
